# ml-app

./: .env.dev  .env.prod  .env.test  .pre-commit-config.yaml  .sops.yaml  README.md  app.py  docker-compose.yaml  dockerfile  inference.py  main.py  public_key.asc  pyproject.toml  secrets.yaml  settings.py  training.py
api/models/: iris.py
tests/: conftest.py  test_app.py  test_model.py  test_settings.py
